--- a/src/styles/body.css
+++ b/src/styles/body.css
@@ -1,167 +1,164 @@
-body{
-    margin: 0;
-}
-.firstSection{
-    margin-top : 50px;
-    width: 100%;
-
-    /* Background */
-    background: #000000;
-    mix-blend-mode: darken;
-    opacity: 0.8;
-    border-radius: 25px;
-
-    display: flex;
-    justify-content: center;
+body {
+  margin: 0;
 }
 
+.firstSection {
+  margin-top: 50px;
+  width: 100%;
 
-.homeImage  {
-    opacity: 0.7;
-    height: 100%;
-    width: 100%;
-    background: #F7F7F7;
-    border-radius: 25px;
+  /* Background */
+  background: #000000;
+  mix-blend-mode: darken;
+  opacity: 0.8;
+  border-radius: 25px;
+
+  display: flex;
+  justify-content: center;
 }
 
-.tagline{
-    width: fit-content;
-    color: white;
-    z-index: 100;
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 48px;
-    line-height: 142.6%;
-    position: absolute;  
+.homeImage {
+  opacity: 0.7;
+  height: 100%;
+  width: 100%;
+  background: #f7f7f7;
+  border-radius: 25px;
+}
+
+.tagline {
+  width: fit-content;
+  color: white;
+  z-index: 100;
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 48px;
+  line-height: 142.6%;
+  position: absolute;
 }
 
 /*Les Cartes*/
 
-.gallery{
-    width: 100%;
-    margin-top: 5%;
-    background: #F7F7F7;
-    border-radius: 25px;
+.gallery {
+  width: 100%;
+  margin-top: 5%;
+  background: #f7f7f7;
+  border-radius: 25px;
 }
 
-.houseListContainer{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+.houseListContainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
-.houseListCard{
-    list-style: none;
-    margin: 3%;
-    width: 20%;
+.houseListCard {
+  list-style: none;
+  margin: 3%;
+  width: 20%;
 }
 
-.houseLink{
-    display: flex;
-    flex-wrap: wrap;
-    align-items: self-end;
-    height: 100%;
+.houseLink {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: self-end;
+  height: 100%;
 }
 
-.houseLink:hover{
-    box-shadow:  0px 2px 10px  orange;
-    border-radius: 15px;
+.houseLink:hover {
+  box-shadow: 0px 2px 10px orange;
+  border-radius: 15px;
 }
-.img{
-    width: 100%;
-    height: 100%;
-}
-
-.houseTitles{
-    position: absolute;
-    width: 19%;
-    color: white;
-    font-family: 'Montserrat';
-    font-weight: 500;
-    font-size: 16px;
+.img {
+  width: 100%;
+  height: 100%;
 }
 
-.footerContainer{
-    height: 160px;
-    text-align: center;
-    background-color: #000000;
+.houseTitles {
+  position: absolute;
+  width: 19%;
+  color: white;
+  font-family: 'Montserrat';
+  font-weight: 500;
+  font-size: 16px;
 }
 
-.footerContainer img:first-of-type{
-    width: 122px;
-    height: 39.44px;
-    top: 31.58%;
-    position: relative;
+.footerContainer {
+  height: 160px;
+  text-align: center;
+  background-color: #000000;
 }
 
-.footerContainer img:last-of-type{
-    height: 46px;
-    width: 513px;
-    top: 40%;
-    position:relative;
+.footerContainer img:first-of-type {
+  width: 122px;
+  height: 39.44px;
+  top: 31.58%;
+  position: relative;
 }
 
+.footerContainer img:last-of-type {
+  height: 46px;
+  width: 513px;
+  top: 40%;
+  position: relative;
+}
 
 /*Pour tous les appareils équipés d'écrans et dont la taille est inférieure à 780px*/
-@media screen and (min-width :425px) and (max-width: 1024px){
+@media screen and (min-width: 425px) and (max-width: 1024px) {
+  .kasa-header-nav {
+    width: 40%;
+  }
 
-    .kasa-header-nav {
-        width: 40%;
-    }
-    
-    .firstSection{
-        height: 200px;
-    }
+  .firstSection {
+    height: 200px;
+  }
 
-    .houseListCard {
-        list-style: none;
-        margin: 3% 0%;
-        width: 40%;
-    }
+  .houseListCard {
+    list-style: none;
+    margin: 3% 0%;
+    width: 40%;
+  }
 
-    .houseTitles{
-        font-size: 18px;
-        width: 40%;
-    }
-    .houseLink img{
-        border-radius: 15px;
-    }
+  .houseTitles {
+    font-size: 18px;
+    width: 40%;
+  }
+  .houseLink img {
+    border-radius: 15px;
+  }
 }
 
+@media screen and (max-width: 525px) {
+  body {
+    display: flex;
+  }
 
-@media screen and (max-width: 525px){
-    body{
-        display: flex;
-    }
+  .kasa-layout {
+    right: 0%;
+    left: 0%;
+    margin: auto;
+  }
 
-    .kasa-layout {
-        right: 0%;
-        left: 0%;
-        margin: auto;
-    }
+  .firstSection {
+    height: 200px;
+  }
 
-    .firstSection{
-        height: 200px;
-    }
+  .houseListContainer {
+    display: flex;
+    flex-direction: column;
+  }
 
-    .houseListContainer {
-        display: flex;
-        flex-direction: column;
-    }
-    
-    .houseListCard{
-        margin: 3% 0%;
-        width: 100%;
-        height: 220px;
-    }
+  .houseListCard {
+    margin: 3% 0%;
+    width: 100%;
+    height: 220px;
+  }
 
-    .gallery{
-        background-color: white;
-    } 
+  .gallery {
+    background-color: white;
+  }
 
-    .houseTitles {
-        font-size: 26px;
-        width: 60%;
-    }
+  .houseTitles {
+    font-size: 26px;
+    width: 60%;
+  }
 }
