--- a/src/styles/imageSlider.css
+++ b/src/styles/imageSlider.css
@@ -54,6 +54,11 @@
     background-size: contain;
 }
 
+.indexNumbers{
+    position: absolute;
+    color: white;
+    margin: 50% -50%;
+}
 
 @media screen and (max-width: 780px){
 
@@ -68,6 +73,11 @@
     .rightArrow{
         height: 48px;
         top: 45%;
+    }
+    .indexNumbers{    
+        position: absolute;
+        margin: 70% -50%;
+        color: white;
     }
 
 }
