--- a/src/codeReact/styles/Collapse.css
+++ b/src/codeReact/styles/Collapse.css
@@ -22,11 +22,13 @@
 .collapseLabel {
   cursor: pointer;
   width: 100%;
+  font-size: 18px;
 }
 
 .collapseBanner {
   cursor: pointer;
   border-radius: 15px;
+  height: 52px;
   border: none;
   width: 100%;
 }
@@ -63,12 +65,21 @@ span {
 }
 
 @media screen and (max-width: 780px) {
+  
   .collapseTabContainer {
     width: 100%;
   }
+  .collapseBanner {
+    height: 30px;
+    align-items: center;
+  }
+  
+  .collapseLabel{
+    font-size: 12px;
+  }
 
   .mobileAdjust {
-    margin: 8px 0px;
+    margin: 2px 0px;
     width: 100%;
   }
 }
