--- a/src/codeReact/styles/banner.css
+++ b/src/codeReact/styles/banner.css
@@ -1,7 +1,7 @@
 .kasa-header {
     width: 100%;
     display: flex;
-    height: 70px;
+    height: 68px;
     justify-content: space-between;
     margin-top: 25px;
     margin-bottom: 50px;
@@ -71,13 +71,11 @@
 }
 
 @media screen and (max-width: 780px) {
-    /* .kasa-layout {
-        position: unset;
-        margin: auto;
-    } */
 
     .kasa-header {
         display: flex;
+        height: 47px;
+        margin : 12px 0px;
         align-content: center;
     }
 
@@ -91,10 +89,10 @@
     }
 
     .linkText {
-        font-size: 15px;
+        font-size: 10px;
     }
 
     .linkTextTwo {
-        font-size: 15px;
+        font-size: 10px;
     }
 }
