--- a/src/codeReact/styles/body.css
+++ b/src/codeReact/styles/body.css
@@ -1,6 +1,8 @@
 body {
   margin: 0;
+
 }
+
 
 .kasa-container {
     width: 90%;
@@ -89,8 +91,12 @@ body {
 }
 
 .footerContainer {
+  flex-flow: column;
   height: 160px;
+  align-items: center;
   text-align: center;
+  margin-top: 16px;
+  display: flex;
   background-color: #000000;
 }
 
@@ -102,7 +108,6 @@ body {
 }
 
 .footerContainer img:last-of-type {
-  height: 46px;
   width: 513px;
   top: 40%;
   position: relative;
@@ -153,7 +158,9 @@ body {
   }
 
   .tagline {
-    font-size: 32px;
+    font-size: 24px;
+    margin: 0;
+    width: 100%;
   }
 
   .houseListContainer {
